Changed minimum block pane block size to 100%/8 to prevent empty gap

--- a/src/styles/block-nav-pane.less
+++ b/src/styles/block-nav-pane.less
@@ -20,7 +20,7 @@
     flex: 1;
     width: 20%;
     max-width: 20%;
-    min-width: 100% / 7;
+    min-width: 100% / 8;
     height: 100%;
   }
 
